Troubleshooting Layout Issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,8 @@ a{
     font-size: 1.8rem;
     font-weight: 600;
     text-transform: uppercase;
-    padding: 2rem 3rem;
+    /* we add 4vw insted 4rem to avoid the problem of small screen */
+    padding: 2rem 4vw;
     border: 0;
     border-radius: 40px;
     cursor: pointer;
@@ -245,6 +246,7 @@ a{
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
 }
 .input-group .btn{
     margin: 4px;
@@ -444,6 +446,9 @@ a{
     background: var(--color-primary);
     color: #fff;
 }
+.callout-signup {
+    transform: translateY(5rem);
+}
 .callout-heading{
     color: #fff;
     margin-top: 0;
@@ -617,8 +622,9 @@ a{
    max-width: 670px;
 }
 .block-domain-prices{
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(2,6rem);
     font-size: 2rem;
     font-weight: 600;
